--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,62 @@
     android:layout_height="match_parent"
     tools:context=".feature.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/iv_main_display"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:contentDescription="TODO"
+        android:scaleType="centerCrop"
         android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_start_16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="16dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_end_16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="16dp" />
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_main_black"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Black"
+        app:layout_constraintBottom_toTopOf="@id/sb_main_luminosity"
+        app:layout_constraintEnd_toEndOf="@id/gl_end_16dp"
+        app:layout_constraintStart_toStartOf="@id/gl_start_16dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_main_display" />
+
+    <SeekBar
+        android:id="@+id/sb_main_luminosity"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:max="510"
+        android:progress="255"
+        app:layout_constraintBottom_toTopOf="@id/btn_main_default"
+        app:layout_constraintEnd_toEndOf="@id/gl_end_16dp"
+        app:layout_constraintStart_toStartOf="@id/gl_start_16dp"
+        app:layout_constraintTop_toBottomOf="@id/btn_main_black" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_main_default"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Default"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/gl_end_16dp"
+        app:layout_constraintStart_toStartOf="@id/gl_start_16dp"
+        app:layout_constraintTop_toBottomOf="@id/sb_main_luminosity" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
