#5 [chore] : extract string resource

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/iv_main_display"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/image_main"
         android:scaleType="centerCrop"
         android:text="Hello World!"
         app:layout_constraintDimensionRatio="1"
@@ -38,7 +38,7 @@
         android:id="@+id/btn_main_black"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Black"
+        android:text="@string/btn_main_grayscale"
         app:layout_constraintBottom_toTopOf="@id/sb_main_luminosity"
         app:layout_constraintEnd_toEndOf="@id/gl_end_16dp"
         app:layout_constraintStart_toStartOf="@id/gl_start_16dp"
@@ -59,7 +59,7 @@
         android:id="@+id/btn_main_default"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Default"
+        android:text="@string/btn_main_default"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/gl_end_16dp"
         app:layout_constraintStart_toStartOf="@id/gl_start_16dp"
